Add Service calculation points of match